--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Snake Game</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>贪吃蛇游戏</title>
+  <style>
+    body { text-align: center; background: #222; color: white; font-family: sans-serif; }
+    canvas { background: #111; margin-top: 20px; border: 2px solid #555; }
+    button { font-size: 24px; margin: 5px; padding: 10px 20px; }
+  </style>
 </head>
 <body>
-  <div class="score">Score: <span id="score">0</span></div>
+  <h1>🐍 贪吃蛇 Snake Game</h1>
   <canvas id="gameCanvas" width="400" height="400"></canvas>
-  <div class="controls">
-    <button onclick="changeDirection('ArrowUp')">⬆️</button><br>
-    <button onclick="changeDirection('ArrowLeft')">⬅️</button>
-    <button onclick="changeDirection('ArrowDown')">⬇️</button>
-    <button onclick="changeDirection('ArrowRight')">➡️</button>
+
+  <div>
+    <button onclick="simulateKey('ArrowUp')">⬆️</button><br/>
+    <button onclick="simulateKey('ArrowLeft')">⬅️</button>
+    <button onclick="simulateKey('ArrowDown')">⬇️</button>
+    <button onclick="simulateKey('ArrowRight')">➡️</button><br/><br/>
+    <button onclick="restartGame()">🔄 重新开始</button>
+    <p>得分：<span id="score">0</span></p>
   </div>
-  <button onclick="restartGame()">🔄 重新开始</button>
+
+  <audio id="eatSound" src="apple.mp3"></audio>
+  <audio id="deadSound" src="dead.mp3"></audio>
+
   <script src="snake.js"></script>
 </body>
 </html>
