--- a/index.html
+++ b/index.html
@@ -1,48 +1,80 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>贪吃蛇 Snake</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <title>贪吃蛇 Snake Game</title>
   <style>
     body {
       background-color: #111;
-      color: #fff;
-      text-align: center;
+      color: white;
       font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
+
     canvas {
-      background: #000;
-      display: block;
-      margin: 20px auto;
-      border: 2px solid #444;
+      background-color: #000;
+      margin-top: 20px;
+      border: 2px solid white;
+      touch-action: none;
     }
-    .controls button {
-      font-size: 20px;
+
+    .buttons {
+      margin-top: 15px;
+      display: grid;
+      grid-template-columns: 60px 60px 60px;
+      grid-template-rows: 60px 60px;
+      gap: 10px;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .btn {
+      width: 60px;
+      height: 60px;
+      font-size: 18px;
+      border: none;
+      background-color: #444;
+      color: white;
+      border-radius: 8px;
+      touch-action: manipulation;
+    }
+
+    #restart {
+      margin-top: 15px;
       padding: 10px 20px;
-      margin: 5px;
-    }
-    #score {
-      font-size: 22px;
+      background-color: crimson;
+      border: none;
+      border-radius: 8px;
+      color: white;
+      font-size: 16px;
     }
   </style>
 </head>
 <body>
-  <h1>🐍 贪吃蛇</h1>
-  <canvas id="gameCanvas" width="400" height="400"></canvas>
 
-  <div class="controls">
-    <button id="up">⬆️</button><br/>
-    <button id="left">⬅️</button>
-    <button id="down">⬇️</button>
-    <button id="right">➡️</button><br/><br/>
-    <button id="restart">🔄 重新开始</button>
+  <h1>贪吃蛇游戏</h1>
+  <canvas id="gameCanvas"></canvas>
+
+  <div class="buttons">
+    <div></div>
+    <button id="up" class="btn">↑</button>
+    <div></div>
+    <button id="left" class="btn">←</button>
+    <button id="down" class="btn">↓</button>
+    <button id="right" class="btn">→</button>
   </div>
 
-  <p>得分：<span id="score">0</span></p>
+  <button id="restart">重新开始</button>
 
-  <audio id="eatSound" src="apple.mp3"></audio>
-  <audio id="deadSound" src="dead.mp3"></audio>
+  <!-- 音效 -->
+  <audio id="eatSound" src="eat.mp3" preload="auto"></audio>
+  <audio id="dieSound" src="die.mp3" preload="auto"></audio>
 
   <script src="snake.js"></script>
 </body>
