--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>贪吃蛇 Snake Game</title>
+  <title>贪吃蛇大冒险</title>
   <style>
     body {
       background-color: #111;
